# awesome-japanese-llm

./: .404-links.yml  .gitattributes  .gitignore  .lycheeignore  CITATION.bib  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  README.md  README_en.md  README_fr.md  package.json
.claude/rules/: benchmark-addition.md  contributing.md  frontend-components.md  model-addition.md  references-addition.md  table-formatting.md  vlm-addition.md
.github/workflows/: add_contributors.yml  add_contributors_en.yml  close-inactive-issues.yml  dead-link-checker.yml  jekyll-gh-pages.yml  markdown-lint.yml  vitepress-gh-pages.yml
.vitepress/: config.mts
.vitepress/theme/: BackToTop.ts  BackToTop.vue  back-to-top.css  custom.css  index.css  index.mts  index.ts
en/: README.md
figures/scripts/: parameter_size_overview.csv  parameter_size_overview_generate.py  parameter_size_overview_ja.csv  parameter_size_overview_retrieve.py  pyproject.toml
fr/: README.md
parts/: references_model.md  references_training.md
scripts/: fix_bibtex_codeblock_for_jekyll.sh
